# genai-oneshots

./: .gitignore  README.md
arena-rpg-with-image-gen/: chatgpt-o1-dec2024.py  pyproject.toml  seed.md
evergreeen-gacha/: GAME_DESIGN.md  README.md
evergreen-crawl-tcg/: .gitignore  README.md  alembic.ini  pyproject.toml  requirements-test.txt  requirements.txt  seed.md
evergreen-crawl-tcg/alembic/: env.py
evergreen-crawl-tcg/alembic/versions/: 84201b4c032d_initial_migration.py  ec363ebc6f50_add_card_collection_to_player_model.py
evergreen-crawl-tcg/app/: __init__.py  main.py
evergreen-crawl-tcg/app/migrations/: add_player_level.py
evergreen-crawl-tcg/app/models/: __init__.py  battler_card.py  card_effect.py  database.py  deck.py  dungeon.py  player.py  shop.py  tag.py
evergreen-crawl-tcg/app/routes/: game.py
evergreen-crawl-tcg/app/schemas/: game.py
evergreen-crawl-tcg/app/services/: game_service.py
evergreen-crawl-tcg/frontend/: README.md  package-lock.json  package.json
evergreen-crawl-tcg/frontend/src/: App.tsx
evergreen-crawl-tcg/frontend/src/assets/: base64Assets.ts
evergreen-crawl-tcg/frontend/src/components/: DeckBuilder.tsx  GameBoard.tsx  GameUI.tsx  Navbar.tsx  Navigation.tsx  SetupScreen.tsx  Shop.tsx
evergreen-crawl-tcg/frontend/src/components/ui/: button.tsx  input.tsx
evergreen-crawl-tcg/frontend/src/config/: game.ts
evergreen-crawl-tcg/frontend/src/game/: config.ts
evergreen-crawl-tcg/frontend/src/scenes/: CombatScene.ts  DungeonScene.ts  ShopScene.ts
evergreen-crawl-tcg/frontend/src/scenes/dungeon/: DungeonScene.ts  assets.ts  audio.ts  constants.ts  grid.ts  handlers.ts  player.ts  types.ts
evergreen-crawl-tcg/frontend/src/services/: api.ts
evergreen-crawl-tcg/frontend/src/types/: events.d.ts
evergreen-crawl-tcg/tests/: conftest.py  test_player_creation.py
harambe-game/: PROMPT.md
idle-rpg/: README.md  chatgpt-o1-dec2024.html  seed.md
king-bananu/: PROMPT.md  PROMPT_STAGES.md  README.md  package-lock.json
king-bananu/game/: .eslintrc.cjs  package-lock.json  package.json  pnpm-lock.yaml
king-bananu/game/src/: App.css  App.tsx  labyrinthos.d.ts
king-bananu/game/src/components/menu/: MainMenu.css  MainMenu.tsx
king-bananu/game/src/components/world/: MapDisplay.tsx  MovementControls.tsx
king-bananu/game/src/context/: AppContext.tsx
king-bananu/game/src/core/: saveLoad.ts
king-bananu/game/src/core/map/: mapManager.ts  predefinedMaps.ts  worldGenerator.ts
king-bananu/game/src/core/systems/: experience.ts
king-bananu/game/src/features/player/: usePlayerMovement.ts
king-bananu/game/src/types/: characterTypes.ts  fogTypes.ts  gameTypes.ts  index.ts  itemTypes.ts  mapTypes.ts
king-bananu/king-bananu-game/: .env.template  PROMPT_IN_STAGES.md  package-lock.json  package.json
king-bananu/king-bananu-game/prisma/: schema.prisma
king-bananu/king-bananu-game/src/: main.ts
king-bananu/king-bananu-game/src/scenes/: GameScene.ts  MainMenuScene.ts  PreloaderScene.ts
king-bananu/king-bananu-game/src/services/: WorldGenerator.ts
learn-to-code/: .gitignore  README.md  package-lock.json  package.json
learn-to-code/client/: index.html  package-lock.json  package.json  tailwind.config.js
learn-to-code/client/src/: App.tsx  index.css
learn-to-code/client/src/components/: CodeRunner.tsx  Navigation.tsx
learn-to-code/client/src/contexts/: AuthContext.tsx
learn-to-code/client/src/hooks/: useTheme.ts
learn-to-code/client/src/pages/: Flashcards.tsx  Home.tsx  Learn.tsx  Login.tsx  Profile.tsx  Quizzes.tsx  Register.tsx
learn-to-code/database/: learn-to-code.db
learn-to-code/server/: package-lock.json  package.json
learn-to-code/server/src/: db.js  index.js
learn-to-code/server/src/db/: seed.js
learn-to-code/server/src/db/seeds/: flashcards.js
learn-to-code/server/src/routes/: auth.js  flashcards.js
proc-roguelite/: README.md  pyproject.toml  seed-step-2.md  seed.md
simplex-tcg/: PROMPT_STAGES.md  README.md
simplex-tcg/simplex-tcg-app/: .env.template  package-lock.json  package.json
simplex-tcg/simplex-tcg-app/src/app/admin-test/: page.tsx
simplex-tcg/simplex-tcg-app/src/app/auth/callback/: route.ts
simplex-tcg/simplex-tcg-app/src/app/login/: page.tsx
simplex-tcg/simplex-tcg-app/src/lib/supabase/: client.ts
simplex-tcg/supabase/: .env.template  config.toml  seed.sql
simplex-tcg/supabase/functions/_shared/: cors.ts
simplex-tcg/supabase/functions/create-game/: index.ts
simplex-tcg/supabase/functions/initialize-game-state/: index.ts
simplex-tcg/supabase/migrations/: 20250519031948_create_profiles_table.sql  20250519032229_create_card_definitions_table.sql  20250519032405_create_games_table.sql  20250519033101_create_game_players_table.sql  20250519033258_update_games_rls_policies.sql  20250519033439_create_player_cards_table.sql  20250519033543_create_game_log_table.sql
superpong/: cursor-composer.py  pyproject.toml  seed.md
wizard-dude/: README.md  next.config.js  package-lock.json  package.json
wizard-dude/scripts/: print-folder-structure.ts
wizard-dude/src/app/: page.tsx
wizard-dude/src/app/components/: Game.tsx  WizardForm.tsx
wizard-dude/src/app/core/components/: LabeledChipCollection.tsx
wizard-dude/src/app/settings/components/: SettingsForm.tsx
wizard-dude/src/pages/: game.tsx  index.tsx
wizard-dude/src/phaser/: EnemyManager.ts  GameScene.ts  PlayerManager.ts  types.ts
